name: Regrade
seedFile: fixtures/course-w-submissions.sql
steps:
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - tapOn:
      text: E2E Test Assignment
  - tapOn:
      text: View
      parentCy: "submission-Test Student"
  - assertVisible:
      text: "Grade earned: 100/100"
  - typeText:
      text: "80"
      dataCy: "manual-grade-input"
  - tapOn:
      dataCy: "manual-grade-save"
  - assertVisible:
      text: "Grade earned: 80/100"
  - tapOn:
      text: "Close"
  - assertVisible:
      text: "Grade: 80/100"
  - tapOn:
      text: Roster
  - tapOn:
      text: student@featurebench-test.com
      parentSelector: '[class^="_roster"] [class^="_column"]'
  - assertVisible:
      text: "80/100"
      parentCy: "grade-row-E2E Test Assignment"
  - assertVisible:
      text: "80.0%"
      parentCy: "grade-row-E2E Test Assignment"
  - tapOn:
      text: Gradebook
  - assertVisible:
      dataCy: "gradebook-column-cmjjg0nfn0001qrmbspysapdx" # E2E Test Assignment
      parentCy: "gradebook-row-Test Student"
      text: "80/100"
  - assertVisible:
      dataCy: "gradebook-column-cmjjg0nfn0001qrmbspysapdx" # E2E Test Assignment
      parentCy: "gradebook-row-Test Student"
      text: "80.0%"
