name: Submit assignment retention mode MOST_RECENT
seedFile: fixtures/course-tp-assignment.sql
steps:
  - sql: UPDATE "Course" SET "submissionRetentionMode" = 'MOST_RECENT' WHERE "name" = 'E2E Test Course';
  - authenticateUser:
      username: student@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - assertVisible:
      text: E2E Test Assignment
  - tapOn:
      text: E2E Test Assignment
  ##############################################################################
  # Submit the primary signature (should be correct)
  - selectFile:
      filePath: cypress/fixtures/SLDPRT/test/test.good.SLDPRT
      dataCy: part-file
      allowScroll: true
  - tapOn:
      text: Upload submission
  - assertVisible:
      text: Grading your part…
  - assertVisible:
      text: You're up next!
  - assertVisible:
      text: Position 1 of 1
  - assertVisible:
      text: "Grade earned: 100/100"
  - tapOn:
      text: "Close"
      allowScroll: true
  ##############################################################################
  # Submit the next signature (should be partial)
  - selectFile:
      filePath: cypress/fixtures/SLDPRT/test/test.no-chamfer.SLDPRT
      dataCy: part-file
      allowScroll: true
  - tapOn:
      text: Upload submission
  - assertVisible:
      text: Grading your part…
  - assertVisible:
      text: You're up next!
  - assertVisible:
      text: Position 1 of 1
  - assertVisible:
      text: "Grade earned: 70/100"
  - assertVisible:
      text: "Hint: This is a test feedback"
      allowScroll: true
  - tapOn:
      text: "Close"
      allowScroll: true
  ##############################################################################
  # Verify the student has an accurate grade and feedback
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - tapOn:
      text: E2E Test Assignment
  - assertVisible:
      dataCy: "submission-Test Student"
      parentSelector: div[class^="_teacherSubmissionList"]
  - assertVisible:
      parentCy: submission-Test Student
      text: "Test Student"
  - assertVisible:
      parentCy: submission-Test Student
      text: "70/100"
  - tapOn:
      text: View
      parentCy: submission-Test Student
  - assertVisible:
      text: "Grade earned: 70/100"
  - tapOn:
      text: "Close"
      allowScroll: true
  ##############################################################################
  # Check that the student's grade is accurately reflected in the gradebook
  - tapOn:
      text: Gradebook
  - assertVisible:
      dataCy: "gradebook-column-cmjjg0nfn0001qrmbspysapdx" # E2E Test Assignment
      parentCy: "gradebook-row-Test Student"
      text: "70.0%"
  - assertVisible:
      dataCy: "gradebook-column-cmjjg0nfn0001qrmbspysapdx" # E2E Test Assignment
      parentCy: "gradebook-row-Test Student"
      text: "70/100"
  - tapOn:
      dataCy: "gradebook-scored-button-cmjjg0nfn0001qrmbspysapdx" # E2E Test Assignment
      parentCy: "gradebook-row-Test Student" # E2E Test Assignment
  - assertVisible:
      text: "Grade earned: 70/100"
  - tapOn:
      text: "Close"
      allowScroll: true
  - assertVisible:
      text: "70.0%"
      selector: '[class^="_averageCell"]'
      parentCy: "gradebook-row-Test Student"
