# Checks to see that when we submit a signature that is set up as a partial
# (70%) and submit late at default late settings, we get a score of 70%
# and no penalty.

name: Submit assignment late by 30 mins (partial signature) (no penalty)
seedFile: fixtures/course-tp-assignment.sql
steps:
  ##############################################################################
  # Set up a late policy
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - tapOn:
      text: Course Details
  - typeText:
      dataCy: max-lateness
      text: "24" # hours
  - typeText:
      dataCy: penalty-percent
      text: "20" # percent
  - tapOn:
      text: Save course settings
  ##############################################################################
  # Log in as a student
  - authenticateUser:
      username: student@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - assertVisible:
      text: E2E Test Assignment (30 mins late)
  - tapOn:
      text: E2E Test Assignment (30 mins late)
  - assertVisible:
      text: This is a test assignment, generated by and for E2E tests.
  - assertVisible:
      text: "Late submissions are allowed. Limit: 1 day past the deadline. Penalty: 20% flat penalty."
  - assertVisible:
      text: This assignment is past due. A late penalty will be applied.
  ##############################################################################
  # Submit the signature
  - selectFile:
      filePath: cypress/fixtures/SLDPRT/test/test.no-chamfer.SLDPRT
      dataCy: part-file
      allowScroll: true
  - tapOn:
      text: Upload submission
  - assertVisible:
      text: Grading your part…
  - assertVisible:
      text: You're up next!
  - assertVisible:
      text: Position 1 of 1
  - assertVisible:
      text: "Grade earned: 56/100" # 70 with 20% penalty
  - assertVisible:
      text: Late penalty applied (original score 70/100).
  - assertVisible:
      text: "Hint: This is a test feedback"
      allowScroll: true
  ##############################################################################
  # Verify the student has an accurate grade and feedback
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - tapOn:
      text: E2E Test Assignment (30 mins late)
  - assertVisible:
      dataCy: "submission-Test Student"
      parentSelector: div[class^="_teacherSubmissionList"]
  - assertVisible:
      parentCy: submission-Test Student
      text: "Test Student"
  - assertVisible:
      parentCy: submission-Test Student
      text: "56/100"
  - assertVisible:
      parentCy: submission-Test Student
      text: "1 attempt"
  - tapOn:
      text: View
      parentCy: submission-Test Student
  - assertVisible:
      text: "Grade earned: 56/100"
  - assertVisible:
      text: Late penalty applied (original score 70/100).
  - assertVisible:
      text: "Hint: This is a test feedback"
      allowScroll: true
  - tapOn:
      text: "Close"
      allowScroll: true
  ##############################################################################
  # Check that the student's grade is accurately reflected in the gradebook
  - tapOn:
      text: Gradebook
  - assertVisible:
      dataCy: "gradebook-column-cmjjh4z2n0001qrmblp8k7s9e" # E2E Test Assignment (30 mins late)
      parentCy: "gradebook-row-Test Student"
      text: "56.0%"
  - assertVisible:
      dataCy: "gradebook-column-cmjjh4z2n0001qrmblp8k7s9e" # E2E Test Assignment (30 mins late)
      parentCy: "gradebook-row-Test Student"
      text: "56/100"
  - tapOn:
      dataCy: "gradebook-scored-button-cmjjh4z2n0001qrmblp8k7s9e" # E2E Test Assignment (30 mins late)
      parentCy: "gradebook-row-Test Student"
  - assertVisible:
      text: "Grade earned: 56/100"
  - assertVisible:
      text: Late penalty applied (original score 70/100).
  - assertVisible:
      text: "Hint: This is a test feedback"
      allowScroll: true
  - tapOn:
      text: "Close"
      allowScroll: true
  - assertVisible:
      text: "56.0%"
      selector: '[class^="_averageCell"]'
      parentCy: "gradebook-row-Test Student"
  ##############################################################################
  # Check that the student's grade is accurately reflected in the roster
  - tapOn:
      text: Roster
  - tapOn:
      text: student@featurebench-test.com
      parentSelector: '[class^="_roster"] [class^="_column"]'
  - assertVisible:
      text: "56/100"
      parentCy: "grade-row-E2E Test Assignment (30 mins late)"
  - assertVisible:
      text: "56.0%"
      parentCy: "grade-row-E2E Test Assignment (30 mins late)"
  - tapOn:
      text: "View"
      parentCy: "grade-row-E2E Test Assignment (30 mins late)"
  - assertVisible:
      text: "Grade earned: 56/100"
  - assertVisible:
      text: Late penalty applied (original score 70/100).
  - assertVisible:
      text: "Hint: This is a test feedback"
      allowScroll: true
  - tapOn:
      text: "Close"
      allowScroll: true
