# yaml-language-server: $schema=https://raw.githubusercontent.com/jackcrane/cypress-yaml-plugin/main/schema.json

# This test suite checks to verify that it throws an incorrect email or password message if we attempt to log into an account that does not exist.

name: Allows creating account
seedFile: fixtures/blank.sql
steps:
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - tapOn:
      text: "Login"
      allowScroll: true
  - tapOn:
      text: "Create one"
  - typeText:
      placeholder: "John"
      text: Test
  - typeText:
      placeholder: "Doe"
      text: Account
  - typeText:
      selector: 'input[type="email"]'
      text: test@featurebench-test.com
  - typeText:
      selector: 'input[type="password"]'
      text: Password!
  - tapOn:
      selector: 'button[type="submit"]'
  - assertVisible:
      text: "Hello, Test Account"
